dnl Process this file with autoconf to produce a configure script.
AC_INIT(update-menus/update-menus.cc)

AM_INIT_AUTOMAKE(menu,2.1.8-2)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE dnl Be nice with packagers, i.e. ourself 
dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/file.h syslog.h unistd.h libintl.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(mkdir strdup strerror)

AC_OUTPUT(po/Makefile scripts/Makefile po-sections/Makefile doc/Makefile update-menus/Makefile install-menu/Makefile Makefile)

