bin_PROGRAMS            = update-menus 

update_menus_SOURCES = update-menus.cc update-menus.h \
                       stringtoolbox.cc stringtoolbox.h \
		       parsestream.cc parsestream.h \
                       exceptions.h \
                       common.h \
                       compose.hpp
